# auto_super_six

./: .gitignore  .pre-commit-config.yaml  BUILD.pants  README.md  pants.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: formatting.yml  tests.yml
auto_super_six/datamodel/: home_or_away.py  picking_strategy_map.py  super_six_competition.py
auto_super_six/internal/: super_six_webpage.py
auto_super_six/internal/picking_strategies/: __init__.py  base_picking_strategy.py  sample_top_n_probabilities.py  sample_using_probabilities.py  take_most_likely.py
auto_super_six/scripts/: submit_predictions.py
auto_super_six/tests/test_datamodel/: test_picking_strategy_map.py
auto_super_six/tests/test_internal/: test_sample_top_n_probabilities.py  test_sample_using_probabilities.py  test_take_most_likely.py
auto_super_six/utils/: betfair_events.py  webdriver.py
tests/test_datamodel/: test_picking_strategy_map.py
tests/test_internal/: test_sample_top_n_probabilities.py
