[project]
name = "auto-super-six"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "betfair-api-client==0.4.2",
    "black>=22.12.0",
    "fire==0.4.0",
    "numpy>=1.24.1,<2.0.0",
    "pytest>=7.2.0",
    "selenium==4.6.0",
]

[tool.black]
line-length = 127
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
